<resources>
    <string name="app_name">N9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_input">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnA">+</string>
    <string name="btnS">-</string>
    <string name="btnM">X</string>
    <string name="btnD">/</string>
    <string name="btnE">=</string>
    <string name="btnDelete">C</string>
    <string name="about_Us">About Us</string>
    <string name="help">Help</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="good_morning">Good Morning</string>


</resources>